<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_titulo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/size_text"
            android:textColor="#3F51B5"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:ems="@integer/ems_default"
            />
        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:ems="@integer/ems_default"
            />
            <EditText
                android:id="@+id/etCurso"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_curso"
                android:inputType="text"
                android:ems="@integer/ems_default"
                />
            <EditText
                android:id="@+id/etCPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:ems="@integer/ems_default"
                />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registro"
                android:textSize="@dimen/size_btn"
                android:layout_marginTop="@dimen/size_btn"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>